fix overflow of tags

--- a/src/components/Listing/TagBar/TagBar.sass
+++ b/src/components/Listing/TagBar/TagBar.sass
@@ -13,12 +13,13 @@
   .tags
     display: flex
     align-items: center
+    flex-wrap: wrap
 
     .tag
       font-weight: $font-light
       color: $color-gray-4
       padding-left: $space-2
-      margin: 0 $space-1
+      margin: $space-1 $space-1
       border: 1px solid $color-gray-7
       border-radius: $space-2
 
